Web export level thumbnails

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,9 +7,9 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://assets/level_thumbs/*.png,res://scenes/levels/*.tscn"
 exclude_filter=""
-export_path=""
+export_path="web/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -24,7 +24,7 @@ custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
 variant/thread_support=false
-vram_texture_compression/for_desktop=true
+vram_texture_compression/for_desktop=false
 vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
